<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">

    <EditText
        android:id="@+id/NewPasswordInputRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NewPasswordInputRepeatHint"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPasswordInput"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/SchoolInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SchoolInputHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SexTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/NewUsernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NewUsernameInputHint"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/NewPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NewPasswordInputHint"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewUsernameInput"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/CheckFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckFemaleHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CheckMale"
        app:layout_constraintTop_toBottomOf="@+id/NewNickname"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/CheckMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckMaleHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/SexTextView"
        app:layout_constraintTop_toBottomOf="@+id/NewNickname"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/NewNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NewNicknameHint"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPasswordInputRepeat"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignupButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SchoolInput"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/SexTextView"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/SexTextViewText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CheckMale"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>